--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29ycmVjdC1taWRnZS04OS5jbGVyay5hY2NvdW50cy5kZXYk
+DATABASE_URL=postgresql://ryde_owner:Mr3tEwT5kSyv@ep-small-dew-a1mb6zfv.ap-southeast-1.aws.neon.tech/ryde?sslmode=require
+
+EXPO_PUBLIC_SERVER_URL=https://uber.com/
