--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29ycmVjdC1taWRnZS04OS5jbGVyay5hY2NvdW50cy5kZXYk
 DATABASE_URL=postgresql://ryde_owner:Mr3tEwT5kSyv@ep-small-dew-a1mb6zfv.ap-southeast-1.aws.neon.tech/ryde?sslmode=require
-
 EXPO_PUBLIC_SERVER_URL=https://uber.com/
-
 EXPO_PUBLIC_GEOAPIFY_API_KEY=aca7036672c5449eb474ae52d4963b1b
+EXPO_PUBLIC_GOOGLE_API_KEY=AIzaSyCFEZCm3zze4hwxm8WFWVry2EvCPofCNMk
